# ComToWiFi

./: .gitignore  CMakeLists.txt  README.md  icon.rc  main.cpp  main.qrc  main.rc  maindialog.cpp  maindialog.h  maindialog.ui  mythread.cpp  mythread.h  settings.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
